# simgen

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  simgen.db
backend/: Dockerfile  db.py  environments.py  locomotion.py  main.py  physics_rules.py  prompt_parser.py  pyproject.toml  renderer.py  templates.py  visual_themes.py
backend/policies/: hopper.pkl
backend/templates/: bouncing_ball.xml  cartpole.xml  double_pendulum.xml  falling_stack.xml  humanoid.xml  pendulum.xml  ragdoll.xml  robot_arm.xml  spinning_top.xml
docs/: 260327_prompt-to-mujoco-build-log.md  260327_vercel_bake-off-plan.md  260328_locomotion_policy_plan.md  260328_product_manager_log.md  260329_3d_assets_roadmap.md  260329_compute_vision.md  260329_locomotion_integration_lessons.md  260330_walking_policy_status.md  260331_state_of_application.md  260408_brand_restyle_and_templates.md  article_draft_simgen_part3.md
examples/: batched_humanoid_mjx.py  humanoid_walk.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: environment-selector.tsx  feedback-buttons.tsx  generation-timer.tsx  history-sidebar.tsx  prompt-input.tsx  simulation-card.tsx  simulation-grid.tsx  stats-panel.tsx  status-widget.tsx  theme-selector.tsx
gpu-renderer/: Dockerfile  gpu_render_server.py
gpu-renderer/policies/: humanoid_run.pkl  (+1 more)
mjcloud/: cli.py  config.py  gcp.py  startup_script.sh
v1/: CLAUDE_AGENT_PROMPT.md  SimDashboard.jsx  WORKFLOW_README.md  claude_mcp_config.json  mcp_server.py  sim_loop.py
